testdata/baselines/reference/compiler/typeParameterComparableRelation.errors.txt
typeParameterComparableRelation.ts(6,5): error TS2352: Conversion of type 'T' to type 'A' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
  'A' could be instantiated with an arbitrary type which could be unrelated to 'T'.


==== typeParameterComparableRelation.ts (1 errors) ====
    // https://github.com/microsoft/typescript-go/issues/1462
    
    type StringOrT<T> = T | string
    
    function func<A, B, T extends StringOrT<B>>(thing: T): void {
        thing as A; // Error
        ~~~~~~~~~~
!!! error TS2352: Conversion of type 'T' to type 'A' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
!!! error TS2352:   'A' could be instantiated with an arbitrary type which could be unrelated to 'T'.
    }
    